# building_ai_agents_with_langgraph

./: README.md  pyproject.toml
module_2/: simple_react_agent_from_scratch.ipynb
module_4/: 1_llm_application_with_langchain.ipynb  2_prebuilt_react_agent_with_langgraph.ipynb  3_building_chatbot_agent_in_langgraph.ipynb  4_human_in_the_loop_approval.ipynb  5_human_in_the_loop_edit_agent_actions.ipynb  6_human_in_the_loop_wait_for_input.ipynb  7_plan_and_execute_system.ipynb  8_reflection_report_writing_system.ipynb  9_multi_agent_system_financial_analysis.ipynb  llm_application_with_langchain.ipynb  prebuilt_react_agent_with_langgraph.ipynb
notebooks/module_2/: lesson_1_and_2_react_agent_from_scratch.ipynb
notebooks/module_4/: lesson_6_plan_and_execute_system.ipynb  lesson_7_reflection_report_writing_system.ipynb
