[tool.poetry]
name = "building-ai-agents-with-langgraph"
version = "1.0.0"
description = "Jupyter notebooks for the Building AI Agents with LangGraph course."
authors = ["Sajal Sharma <contact@sajalsharma.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
openai = "^1.51.2"
python-dotenv = "^1.0.1"
jupyterlab = "^4.2.5"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
